# plugboard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  schema.sql
.beads/: issues.jsonl  metadata.json
.beads/hooks/: post-commit  post-rewrite
.github/workflows/: cargo-test.yml
docs/: README.md  architecture.md  design.md  plugin-backends.md  quickstart.md
docs/howto/: async-inbox.md  codex-to-gemini.md  completion-notifications.md  install-local-model-backend.md  local-model-workflow.md  measure-latency.md  plugboard-with-local-model.md  write-a-worker-plugin.md
examples/: flow.rs
scripts/: check-ollama  check-ollama-conversation  measure_latency.py  ollama-check  run-ollama-worker  run-ollama-worker-once
src/: error.rs  lib.rs  main.rs  notifier.rs
src/cli/: check.rs  conversation_status.rs  human_output.rs  inspect.rs  message_identifiers.rs  message_metadata.rs  mod.rs  notify.rs  publish.rs  read.rs  request.rs  run.rs  tracking.rs
src/domain/: claim.rs  message.rs  mod.rs
src/exchange/: mod.rs  sqlite.rs
src/plugin/: command.rs  mod.rs
src/runner/: command_runner.rs  mod.rs
src/util/: id.rs  time.rs
src/worker/: host.rs  mod.rs
tests/: cli.rs  end_to_end.rs  example_review_plugin.rs  gemini_plugin.rs  ollama_plugin.rs
