[package]
name = "plugboard"
version = "0.1.0"
edition = "2024"
default-run = "plugboard"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
uuid = { version = "1.18.1", features = ["v4"] }
wait-timeout = "0.2.1"

[dev-dependencies]
tempfile = "3.23.0"
